# dns-server

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  connections.json
.cargo/: config  config.toml
config/: base.yaml  local.yaml  production.yaml
src/: config.rs  dns_resolver.rs  error.rs  errors.rs  lib.rs  main.rs  packet_buffer.rs  ping.rs
src/dns_message/: dns_header.rs  dns_question.rs  dns_record.rs  mod.rs  packet_buffer.rs
src/dns_resolver/: handle_query.rs  lookup.rs  mod.rs
src/dns_server/: handle_query.rs  lookup.rs
src/load_balancer/: connection.rs  handle_query.rs  mod.rs
src/settings/: config.rs  health_check.rs  mod.rs
tests/: config.rs  dns_message.rs  dns_resolver.rs  dns_server.rs  health_check.rs  load_balancer.rs  query_packet.txt  response_packet.txt
